--- a/uts.css
+++ b/uts.css
@@ -11,7 +11,7 @@ body {
 }
 
 .wrapper {
-    width: 1000px;
+    width: 1100px;
     margin: auto;
     position: relative;
 }
@@ -214,3 +214,47 @@ table-responsive {
     padding: 50px 0px 50px 0px;
     margin-top: 50px;
 }
+
+@media screen and (max-width: 991.98px) {
+    .wrapper {
+        width: 90%;
+    }
+
+    .logo a {
+    	display: block;
+    	width: 100%;
+    	text-align: center;
+    }
+
+    nav .menu {
+    	width: 100%;
+    	margin: 0;
+    }
+
+    nav .menu ul {
+    	text-align: center;
+    	margin: auto;
+    	line-height: 60px;
+    }
+
+    nav .menu ul li {
+    	display: inline-block;
+    	float: none;
+    }
+
+    section {
+    	display: block;
+    }
+
+    nav div img {
+    	width: 50px;
+    }
+    section img {
+    	display: block;
+    	width: 50px;
+    	height: auto;
+    }
+
+    .kartu-gallery {
+    	width: 50%;
+    }
